# stt

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ci.sh  default.nix  shell.nix  stck.vim  stt-debug-screen  stt.vim
.github/workflows/: ci.sh  nix.yml  rust.yml
examples/: arg-order.stck  arg-order.stt  argv.stt  bubble-error.stck  closure.stck  closure.stt  copy.stck  fat.stt  generics.stck  include.stck  included.stck  numbers.stck  rust.stt  stt.stt  test.stt  type.stck
examples/lambda/: stt.stt
examples/stdlib/: argv.stck  argv.stt  arr.stt  bool.stt  error.stt  logic.stt  map.stck  map.stt  math.stck  math.stt  print.stck  print.stt  stack.stt  stck.stck  string.stt  stt.stt  types.stck  types.stt
interpreter/: Cargo.toml  README.md
interpreter/src/: main.rs
lang/: Cargo.toml
lang/src/: api.rs  display.rs  error.rs  internals.rs  lib.rs  parse.rs  runtime.rs  token.rs  types.rs
lang/src/tests/: parse.rs  runtime.rs  token.rs  typing.rs
src/: api.rs  cache.rs  display.rs  error.rs  execute.rs  internals.rs  interpreter.rs  lib.rs  main.rs  parse.rs  prelude.rs  preproc.rs  runtime.rs  tests.rs  token.rs  types.rs
src/runtime/: builtins.rs  exec.rs  mod.rs  modes.rs  module.rs  stack.rs
src/runtime/modes/: debug.rs  normal.rs
src/runtime/module/: io.rs
src/tests/: parse.rs  runtime.rs  token.rs  typing.rs
src/tools/: interpreter.rs  read_range.rs
usage/: Cargo.toml
usage/events/: my-birthday.stck
usage/src/: interpreter
usage/src/calendar/: main.rs
usage/src/interpreter/: main.rs
