[package]
name = "stck"
version = "0.3.0"
edition = "2024"
authors = ["Manse <pedromanse@duck.com>"]
default-run = "interpreter"
license-file = "LICENSE.TXT"
keywords = ["embedded", "programming", "language", "stack"]
categories = ["command-line-utilities", "compilers"]
exclude = ["result/", ".*", "ci.sh", "*.nix", "target", "CHANGELOG.md", "stck.vim"]

[dependencies]
clap = { version = "4.5.40", features = ["derive"], optional = true }
colored = "3.0.0"
thiserror = "2.0.12"

[lib]
name = "stck"
path = "src/lib.rs"

[features]
default = [ "interpreter" ]
interpreter = [ "dep:clap" ]

[[bin]]
name = "interpreter"
path = "src/tools/interpreter.rs"
required-features = ["interpreter"]
