[package]
name = "stck-interpreter"
version = "0.1.0"
edition = "2024"
authors = ["Manse <pedromanse@duck.com>"]
license = "GLP-3.0"
keywords = ["programming", "language", "stack", "interpreter"]
categories = ["command-line-utilities", "compilers"]
description = "An interpreter for the stck language"
repository = "https://github.com/PedroManse/stck"
readme = "./README.md"

[dependencies]
stck = "0.3.0"
clap = { version = "4.5.40", features = ["derive"] }
colored = "3.0.0"

[[bin]]
path = "src/main.rs"
name = "stck"
