[package]
name = "stck"
version = "0.3.0"
edition = "2024"
authors = ["Manse <pedromanse@duck.com>"]
license-file = "../LICENSE.TXT"
keywords = ["embedded", "programming", "language", "stack"]
categories = ["command-line-utilities", "compilers"]

[dependencies]
colored = "3.0.0"
thiserror = "2.0.12"

[lib]
name = "stck"
path = "src/lib.rs"

