[package]
name = "stck"
version = "0.3.0"
edition = "2024"
authors = ["Manse <pedromanse@duck.com>"]
license = "GLP-3.0"
keywords = ["embedded", "programming", "language", "stack"]
categories = ["command-line-utilities", "compilers"]
description = "An embeddable interpreted language written fully in rust"
readme = "../README.md"
repository = "https://github.com/PedroManse/stck"

[dependencies]
colored = "3.0.0"
thiserror = "2.0.12"

[lib]
name = "stck"
path = "src/lib.rs"

